<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/colorSurfaceContainerLowest"
    tools:context="projetofinal.main.MainAdminActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarMainAdmin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/admin_panel_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="16dp"
            android:useDefaultMargins="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardSincronizarProdutos"
                style="@style/AdminDashboardCard"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal">
                <LinearLayout style="@style/AdminDashboardCardLayout">
                    <ImageView style="@style/AdminDashboardCardIcon" android:src="@drawable/ic_admin_sync" />
                    <TextView style="@style/AdminDashboardCardTitle" android:text="@string/admin_sincronizar_produtos" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardGerenciarProdutos"
                style="@style/AdminDashboardCard"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal">
                <LinearLayout style="@style/AdminDashboardCardLayout">
                    <ImageView style="@style/AdminDashboardCardIcon" android:src="@drawable/ic_admin_products" />
                    <TextView style="@style/AdminDashboardCardTitle" android:text="@string/admin_gerenciar_produtos" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardVisualizarPedidos"
                style="@style/AdminDashboardCard"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal">
                <LinearLayout style="@style/AdminDashboardCardLayout">
                    <ImageView style="@style/AdminDashboardCardIcon" android:src="@drawable/ic_admin_orders" />
                    <TextView style="@style/AdminDashboardCardTitle" android:text="@string/admin_visualizar_pedidos" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardGerenciarClientes"
                style="@style/AdminDashboardCard"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal">
                <LinearLayout style="@style/AdminDashboardCardLayout">
                    <ImageView style="@style/AdminDashboardCardIcon" android:src="@drawable/ic_admin_clients" />
                    <TextView style="@style/AdminDashboardCardTitle" android:text="@string/admin_gerenciar_clientes" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardLogoutAdmin"
                style="@style/AdminDashboardCard.Danger"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal">
                <LinearLayout style="@style/AdminDashboardCardLayout">
                    <ImageView style="@style/AdminDashboardCardIcon" android:src="@drawable/ic_logout" />
                    <TextView style="@style/AdminDashboardCardTitle" android:text="@string/logout_button" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </GridLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>