<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:context="projetofinal.main.ExcluirPedidoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarExcluirPedido"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/excluir_pedido_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir_pedido_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilIdPedidoExcluir"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_pedido_hint"
            android:layout_marginBottom="24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPedidoIDExcluir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarExcluirPedido"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnConfirmarExcluirPedido"
            style="@style/AppButtonStyle.Danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excluir_button"/>
    </LinearLayout>
</LinearLayout>
