<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="projetofinal.main.VisualizarProdutoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarVisualizarProdutos"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/visualizar_produtos_title" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewProdutos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:clipToPadding="false"
                tools:listitem="@layout/item_produto"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progressBarProdutos"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewNenhumProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nenhum_produto_cadastrado"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnVerCarrinho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/ver_carrinho"
        android:visibility="gone"
        app:icon="@drawable/ic_shopping_cart"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>